LinLogBook 0.6.1

Handling Qt::endl depending on the Qt Version
There are differences between  <=5.14 and 5.15

Save and restore the geometry of the main window, qso table and the search window.

LinLogBook 0.5.5

Now LinLogBook builds against qt5.
Compiler warnings are fixed.
Builds now in build directory.

LinLogBook 0.5

Regexp for time value changed, leading zero now required, corresponding to
adif spezification.
Printing of qsl cards now respects printer resolution.
Time of qso was not printed any longer on qsl card. ( Due to changes in qt ? ). Now fixed.

You can store now eQsl cards in your database.
Fixed two format bugs in date and time format.

LinLogBook 0.4
As in the meantime the ADIF specification  distinguishes between the different ways  ( bureau, eqs, lotw )  sending qsl, LinLogBook is able to keep track of these ways.
Modified File menu, now depending on the different qsl_sent fileds selected in the database definition.

LinLogBook 0.3.1

Now the menu item 'Server' will be enabled if database is automatically opened on startup.
Some error messages give more informations.

Important! Sometimes changes were not written back into the database, so the changes were lost. This bug is now fixed.

LinLogBook 0.3

Printer module for labeling  qsl cards.
Make menu selection depending on the context.

LinLogBook 0.2.1

Fixed some bugs in import /export when containing the character '
The list of qsos will now be ordered by QSO_DATE (, TIME_ON or TIME_OFF ). The later depends on the fields you defined in your linlogbook.
Due to problems with some features of qt, this requires to create a view.
If you are going to update see the README or the documentation how to do.

LinLogBook 0.2

Importfunction for cty.dat
Displaying Continent, Country, WAZ Zone and ITU Zone for a callsign. The Informations are taken from the imported cty.dat file.
